# ChangeLog for app-text/evince
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.85 2007/02/04 08:50:29 corsair Exp $

  04 Feb 2007; Markus Rothe <corsair@gentoo.org> evince-0.6.1-r1.ebuild:
  Stable on ppc64; bug #164978

  03 Feb 2007; Andrej Kacian <ticho@gentoo.org> evince-0.6.1-r1.ebuild:
  Stable on x86, bug #164978.

  03 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  evince-0.6.1-r1.ebuild:
  Stable on ppc wrt bug #164978.

  03 Feb 2007; Olivier Crête <tester@gentoo.org> evince-0.6.1-r1.ebuild:
  Stable on amd64 per bug #164978

  01 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  evince-0.6.1-r1.ebuild:
  Stable on sparc

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> evince-0.6.1.ebuild:
  Stable on IA64, bug 156662.

  18 Jan 2007; Jeroen Roovers <jer@gentoo.org> evince-0.6.1-r1.ebuild:
  Stable for HPPA (bug #147751).

  14 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> evince-0.6.1.ebuild:
  Stable on Alpha.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org> evince-0.6.1.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> evince-0.6.1.ebuild:
  Stable on sparc

*evince-0.6.1-r1 (17 Dec 2006)

  17 Dec 2006; Daniel Gryniewicz <dang@gentoo.org>
  +files/evince-0.6.1-dbus-switch.patch, +evince-0.6.1-r1.ebuild:
  Add actual configure switch for dbus; bug #158034

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> evince-0.6.1.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> evince-0.6.1.ebuild:
  Stable on amd64 wrt bug #156662.

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org> evince-0.6.1.ebuild:
  Stable on x86, bug #156662.

  09 Nov 2006; Doug Goldstein <cardoe@gentoo.org> evince-0.5.3-r1.ebuild,
  evince-0.6.0.ebuild, evince-0.6.1.ebuild:
  Update D-Bus depends to new bindings

  22 Oct 2006; Daniel Gryniewicz <dang@gentoo.org>