@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX evince-0.5.3-display-menu.patch 460 RMD160 8c72adb3a9a7105518eb9d1f686c4a96f1467f96 SHA1 c0a71996202fe85e3e3554fdc7e9a37cf0d3b795 SHA256 b9355d24321352e294170b86110019b47e26de80bd7f7c626eab582d35d5b46e
 MD5 42ae4caf217262666d8e46b484e0ee0c files/evince-0.5.3-display-menu.patch 460
 RMD160 8c72adb3a9a7105518eb9d1f686c4a96f1467f96 files/evince-0.5.3-display-menu.patch 460
@@ -25,14 +28,18 @@ EBUILD evince-0.6.1-r1.ebuild 1964 RMD160 38180cf7421d2f8c8dab028c48bf153d327c45
 MD5 b1523015c6127e7dc907f4cff11b2cc0 evince-0.6.1-r1.ebuild 1964
 RMD160 38180cf7421d2f8c8dab028c48bf153d327c45d9 evince-0.6.1-r1.ebuild 1964
 SHA256 19731c6b6ad725e47e323c1a8e01a49870160dfc7c3c92dde7189c0a4ba07c39 evince-0.6.1-r1.ebuild 1964
+EBUILD evince-0.6.1-r2.ebuild 1956 RMD160 22baaf2b88de6cc348a717d3f7f8735baeee3a63 SHA1 0d04c80a039416192824d6c57d800930765401d7 SHA256 fb7140488a625cb8f03ab9ff079ba84532709274c73aa5864343c8a432ce09a4
+MD5 612f82d2c9bbcefc41ffcf30100be342 evince-0.6.1-r2.ebuild 1956
+RMD160 22baaf2b88de6cc348a717d3f7f8735baeee3a63 evince-0.6.1-r2.ebuild 1956
+SHA256 fb7140488a625cb8f03ab9ff079ba84532709274c73aa5864343c8a432ce09a4 evince-0.6.1-r2.ebuild 1956
 EBUILD evince-0.6.1.ebuild 1858 RMD160 e4f284932a5ef394d77c3d3e4c6b75f3498cc43a SHA1 72072bd35894241a232933c747ff0c6c3b41ca05 SHA256 d0464ffb7ce07149bea8b0866a00827827cf675bee80a790d464f7168061626f
 MD5 023195c08cb41bc607d566c703001f82 evince-0.6.1.ebuild 1858
 RMD160 e4f284932a5ef394d77c3d3e4c6b75f3498cc43a evince-0.6.1.ebuild 1858
 SHA256 d0464ffb7ce07149bea8b0866a00827827cf675bee80a790d464f7168061626f evince-0.6.1.ebuild 1858
-MISC ChangeLog 11656 RMD160 80196362caa392534117fe27d8e6eb2b4b26e285 SHA1 66dfb82d1bc18311d3f27067da574c28226b752c SHA256 d1df31704cfb688f37220d986ba632ce4ed4d1491f39bb0301b9c53a8dfb4458
-MD5 6e969485fea4b32f7780a758d375bb2c ChangeLog 11656
-RMD160 80196362caa392534117fe27d8e6eb2b4b26e285 ChangeLog 11656
-SHA256 d1df31704cfb688f37220d986ba632ce4ed4d1491f39bb0301b9c53a8dfb4458 ChangeLog 11656
+MISC ChangeLog 11884 RMD160 6fa391344c7a9df1c98ae1312b347d67be14e7f4 SHA1 07a178fc488c489ee679a4065682f8a285dff896 SHA256 c037cbe600c3f165e86eef075843f60626f7f325bd8b5ca658dc183d3e332727
+MD5 759e2fb2eb7c7e9e7ff9c137d05dfe42 ChangeLog 11884
+RMD160 6fa391344c7a9df1c98ae1312b347d67be14e7f4 ChangeLog 11884
+SHA256 c037cbe600c3f165e86eef075843f60626f7f325bd8b5ca658dc183d3e332727 ChangeLog 11884
 MISC metadata.xml 218 RMD160 356edd8735bce3bdded1992ed1e01831af9f1f60 SHA1 bb11546aaa0d850f95621d0a9c291bf447697982 SHA256 b53b06e28caff7a3a8fdd06a56946440e889e56ba1e3627dee44e02707cd1a52
 MD5 6725733a03ee56bb113dedaca6063b0f metadata.xml 218
 RMD160 356edd8735bce3bdded1992ed1e01831af9f1f60 metadata.xml 218
@@ -49,3 +56,13 @@ SHA256 3080898d61c2f52fcf2e25788b71061292a8a4a4f49c5981e86c9253ff886b96 files/di
 MD5 f0a0f1d849c5b4752f41d565c47cb363 files/digest-evince-0.6.1-r1 244
 RMD160 755fb9f6972779bb060873f439e99eff2a5a20db files/digest-evince-0.6.1-r1 244
 SHA256 3080898d61c2f52fcf2e25788b71061292a8a4a4f49c5981e86c9253ff886b96 files/digest-evince-0.6.1-r1 244
+MD5 f0a0f1d849c5b4752f41d565c47cb363 files/digest-evince-0.6.1-r2 244
+RMD160 755fb9f6972779bb060873f439e99eff2a5a20db files/digest-evince-0.6.1-r2 244
+SHA256 3080898d61c2f52fcf2e25788b71061292a8a4a4f49c5981e86c9253ff886b96 files/digest-evince-0.6.1-r2 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.2 (GNU/Linux)
+
+iD8DBQFF0mYtomPajV0RnrERAjVBAJ0Xmr/nmJDE/3CGfudwwH6YEFJzygCfTFEg
+L5lLPwjRyCNUaoXGz+6d3Xs=
+=ivab
+-----END PGP SIGNATURE-----
