@@ -1,0 +1,3 @@
+MD5 55a1d4af3cac209c7cfbe83b7ffcee1d evince-0.6.1.tar.bz2 1212271
+RMD160 ac94e1964f4f46e505fe945daa9de288c2587898 evince-0.6.1.tar.bz2 1212271
+SHA256 ee72f48ec0c76a8f44d8a6aed6759d43a147a9d5bb2b15f06460c4d6ef86025e evince-0.6.1.tar.bz2 1212271
